--- a/Index.css
+++ b/Index.css
@@ -1,6 +1,16 @@
-body
+nav
 {
-    margin: 0;
+    position:fixed;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(140,140,140,0);
+    justify-content: space-between;
+    margin:0;
+    padding:10px;
+    width: 100%;
+}
+.logo img {
+    height: 40px;
 }
 .box
 {
@@ -9,15 +19,30 @@ body
 }
 .navbar 
 {
-    position:absolute;
+    position: relative;;
     z-index: 999;
     margin:0;
     top: 0%;
-    background-color: gray;
-    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-basis: 70%;
+}
+.logo
+{
+    flex-basis: 30%;
+    padding-left: 20px;
 }
 .navbar a
 {
     color:white;
     text-decoration: none;
+}
+.header
+{
+    background-image: url("/Overlay.jpg");
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
