--- a/Standard.css
+++ b/Standard.css
@@ -1,10 +1,23 @@
-.horizontal 
+body, html
+{
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+* {
+    box-sizing: inherit;
+}
+.horizontal
 {
     display: flex;
     flex-direction: row;
 }
 .fit 
 {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+}
+.hide
+{
+    display: none;
 }
