--- a/style.css
+++ b/style.css
@@ -11,9 +11,14 @@
 {
     position: fixed;
     width: 100%;
-    padding: 15px 0;
-    background: crimson;
+    padding: 30px 0;
+    /*background: crimson;*/
     font-family: "Ubuntu" ,sans-serif;
+}
+.navbar.sticky 
+{
+    padding: 30px 0;
+    background: crimson;
 }
 .navbar .max-width 
 {
@@ -27,6 +32,10 @@
     font-size:  35px;
     font-weight: 600;
 }
+.navbar .logo a span
+{
+    color: crimson;
+}
 .navbar .menu li
 {
     list-style: none;
@@ -38,6 +47,11 @@
     font-size: 18px;
     font-weight: 500;
     margin-left:25px;
+    transition: color 0.3s ease;
+}
+.navbar .menu li a:hover 
+{
+    color: crimson;
 }
 .max-width 
 {
@@ -49,5 +63,35 @@
 .home 
 {
     display: flex;
-    background: url();
+    background: url(https://images.unsplash.com/photo-1487174244970-cd18784bb4a4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80) no-repeat center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+    color: white;
+    min-height: 500px;
+    font-family: "Ubuntu" ,sans-serif;
+}
+.home .max-width 
+{
+    margin: auto 0 auto 40px;
+}
+.home .home-content .text-1
+{
+    font-size: 27px;
+}
+.home .home-content .text-2
+{
+    font-size: 75px;
+    margin-left:-3px ;
+    font-weight: 600;
+}
+.home .home-content .text-3
+{
+    font-size: 40px;
+    margin: 5px 0px;
+}
+.home .home-content .text-3 span
+{
+    color: crimson;
+    font-weight: 500;
 }
