--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@
     padding: 30px 0;
     /*background: crimson;*/
     font-family: "Ubuntu" ,sans-serif;
+    transition: all 0.3s ease;
 }
 .navbar.sticky 
 {
-    padding: 30px 0;
+    padding: 15px 0;
     background: crimson;
 }
 .navbar .max-width 
@@ -35,6 +36,11 @@
 .navbar .logo a span
 {
     color: crimson;
+    transition: all 0.3s ease;
+}
+.navbar.sticky .logo a span
+{
+    color: white;
 }
 .navbar .menu li
 {
@@ -53,11 +59,22 @@
 {
     color: crimson;
 }
+.navbar.sticky .menu li a:hover 
+{
+    color: white;
+}
 .max-width 
 {
     max-width: 1300px;
     padding: 0 80px;
     margin: auto;
+}
+.menu-btn
+{
+    color: white;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
 }
 /*Home styling*/
 .home 
@@ -94,4 +111,118 @@
 {
     color: crimson;
     font-weight: 500;
+}
+.home .home-content a
+{
+    display: inline-block;
+    background: crimson;
+    color: white;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all ease 0.3s;
+}
+.home .home-content a:hover
+{
+    color:crimson;
+    background: none;
+}
+/* responsive behaviour */
+@media(max-width : 1104px)
+{
+    .home .max-width 
+    {
+        margin-left: 0px;
+    }
+}
+@media(max-width : 991px)
+{
+    .max-width 
+    {
+        padding: 0 50px;
+    }
+}
+@media(max-width : 947px)
+{
+    .menu-btn
+    {
+        display: block;
+        z-index: 999;
+    }
+    .menu-btn i.active::before
+    {
+        content: "\f00d";
+    }    
+    .navbar .menu
+    {
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left:-100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px ;
+        transition: all 0.3s ease;
+    }
+    .navbar .menu.active 
+    {
+        left: 0;
+    }
+    .navbar .menu li 
+    {
+        display: block;
+    }
+    .navbar .menu li a 
+    {
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .home-content .text-2
+    {
+        font-size: 75px;
+    }
+    .home .home-content .text-3
+    {
+        font-size: 35px;
+    }
+    .home .home-content a 
+    {
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+}
+@media(max-width : 690px)
+{
+    .max-width 
+    {
+        padding: 0 23x;
+    }
+    .home .home-content .text-2
+    {
+        font-size: 60px;
+    }
+    .home .home-content .text-3
+    {
+        font-size: 32px;
+    }
+    .home .home-content a 
+    {
+        font-size: 20px;
+
+    }
+}
+@media(max-width: 500px)
+{
+    .home .home-content .text-2
+    {
+        font-size: 50px;
+    }
+    .home .home-content .text-3
+    {
+        font-size: 27px;
+    }
 }
