--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ section
 {
     padding: 100px 0;
 }
-.about , .services, .skills
+.about , .services, .skills, .projects
 {
     font-family: 'Poppins', sans-serif;
 }
@@ -231,16 +231,18 @@ section .title::after
     background: none;
 }
 /* Sevices */
-.services
+.services, .projects
 {
     color: #fff;
     background: #111;
 }
-.services .title::before
+.services .title::before,
+.projects .title::before
 {
     background: #fff;
 }
-.services .title::after
+.services .title::after,
+.projects .title::after
 {
     background: #111;
     content: "What do I do";
@@ -337,6 +339,79 @@ section .title::after
 .skills .skills-content .right .css::before
 {
     width: 60%;
+}
+/* projects*/
+.projects .title::after
+{
+    content: "Previous Works";
+}
+.projects .carousel .card
+{
+    background: #222;
+    border-radius: 6px;
+    padding: 25px 35px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+.projects .carousel .card:hover
+{
+    background: crimson;
+}
+.projects .carousel .card:hover .box
+{
+    transform: scale(1.05);
+}
+.projects .carousel .card .text
+{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+.projects .carousel .card .box
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+.projects .carousel .card img
+{
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: solid 5px crimson;
+    transition: all 0.3s ease;
+}
+.projects .carousel .card:hover img
+{
+    border-color: white;
+}
+.owl-dots 
+{
+    text-align: center;
+    margin-top: 20px;
+}
+.owl-dot 
+{
+    height: 13px;
+    width: 13px;
+    margin: 0 5px;
+    outline: none!important;
+    border-radius: 50%;
+    border: 2px crimson solid !important;
+    transition: all 0.3s ease;
+}
+.owl-dot.active
+{
+    width: 35px;
+    border-radius: 14px;
+}
+.owl-dot.active,
+.owl-dot:hover
+{
+    background: crimson !important;
 }
 /* responsive behaviour */
 @media(max-width : 1300px)
