--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ section .title::after
 
 .contact .contact-content .column
 {
-    width: calc(50% - 30px);
+    width: 100%;
 }
 .contact .contact-content .text
 {
@@ -465,7 +465,7 @@ section .title::after
 }
 .contact .contact-content .left .icons
 {
-    margin: 10px 01;
+    margin: 10px 1px;
 }
 .contact .contact-content .row
 {
@@ -490,71 +490,7 @@ section .title::after
 {
     color: #333;;
 }
-.contact .right form .fields
-{
-    display: flex;
-}
-.contact .right form .field,
-.contact .right form .fields .field
-{
-    height: 45px;
-    width: 100%;
-    margin-bottom: 15px;
-}
-.contact .right form .textarea
-{
-    height: 80px;
-    width: 100%;
-}
-.contact .right form .name
-{
-    margin-right: 10px;
-}
-.contact .right form .email
-{
-    margin-left: 10px;
-}
-.contact .right form .field input,
-.contact .right form .textarea textarea
-{
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgray;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
-    font-family: 'Poppins', sans-serif;
-}
-.contact .right form .textarea textarea
-{
-    padding-top: 10px;
-    resize: none;
-}
-.contact .right form .button
-{
-    height: 47px;
-    width: 170px;
-    margin-top: 25px;
-}
-.contact .right form .button button
-{
-    width: 100%;
-    height: 100%;
-    border: 2px solid crimson;
-    border-radius: 6px;
-    background: crimson;
-    color: white;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-.contact .right form .button button:hover
-{
-    color: crimson;
-    background: none;
-}
+
 /* footer */
 footer
 {
